--- a/index.html
+++ b/index.html
@@ -17,64 +17,143 @@
 
     <div id="audio-controls">
         <div class="audio-control" style="color: red;">
-            <div class="volume-bar">
-                <div class="volume-fill" style="background-color: red;"></div>
-                <div class="volume-knob"></div>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
             </div>
-            <span class="file-name"></span>
-            <input type="file" class="file-input" style="display: none;" accept="audio/*">
-            <button class="add-track">Add Track</button>
-            <button class="play-pause">Play</button>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button> 
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button> 
+            <button class="control-btn">&#9654;</button> 
+            <button class="control-btn">&#9197;</button> 
+            <button class="control-btn">&#128257;</button> 
         </div>
+        <!-- Divider visually handled by CSS -->
         <div class="audio-control" style="color: rgb(11, 4, 97);">
-            <div class="volume-bar">
-                <div class="volume-fill" style="background-color: rgb(11, 4, 97);"></div>
-                <div class="volume-knob"></div>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
             </div>
-            <span class="file-name"></span>
-            <input type="file" class="file-input" style="display: none;" accept="audio/*">
-            <button class="add-track">Add Track</button>
-            <button class="play-pause">Play</button>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
         </div>
+        <!-- Divider visually handled by CSS -->
         <div class="audio-control" style="color: rgb(255, 0, 170);">
-            <div class="volume-bar">
-                <div class="volume-fill" style="background-color: rgb(255, 0, 170);"></div>
-                <div class="volume-knob"></div>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
             </div>
-            <span class="file-name"></span>
-            <input type="file" class="file-input" style="display: none;" accept="audio/*">
-            <button class="add-track">Add Track</button>
-            <button class="play-pause">Play</button>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
         </div>
+        <!-- Divider visually handled by CSS -->
         <div class="audio-control" style="color: rgb(235, 145, 12);">
-            <div class="volume-bar">
-                <div class="volume-fill" style="background-color: rgb(235, 145, 12);"></div>
-                <div class="volume-knob"></div>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
             </div>
-            <span class="file-name"></span>
-            <input type="file" class="file-input" style="display: none;" accept="audio/*">
-            <button class="add-track">Add Track</button>
-            <button class="play-pause">Play</button>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
         </div>
+        <!-- Divider visually handled by CSS -->
         <div class="audio-control" style="color: rgb(45, 211, 147);">
-            <div class="volume-bar">
-                <div class="volume-fill" style="background-color: rgb(45, 211, 147);"></div>
-                <div class="volume-knob"></div>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
             </div>
-            <span class="file-name"></span>
-            <input type="file" class="file-input" style="display: none;" accept="audio/*">
-            <button class="add-track">Add Track</button>
-            <button class="play-pause">Play</button>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
         </div>
+        <!-- Divider visually handled by CSS -->
         <div class="audio-control" style="color: black;">
-            <div class="volume-bar">
-                <div class="volume-fill" style="background-color: rgb(0, 0, 0);"></div>
-                <div class="volume-knob"></div>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
             </div>
-            <span class="file-name"></span>
-            <input type="file" class="file-input" style="display: none;" accept="audio/*">
-            <button class="add-track">Add Track</button>
-            <button class="play-pause">Play</button>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
+        </div>
+        <!-- Divider visually handled by CSS -->
+        <div class="audio-control" style="color: rgb(231, 37, 37);">
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
+            </div>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
+        </div>
+        <!-- Divider visually handled by CSS -->
+        <div class="audio-control" style="color: rgb(127, 22, 247);">
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
+            </div>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
+        </div>
+        <!-- Divider visually handled by CSS -->
+        <div class="audio-control" style="color: rgb(39, 223, 255);">
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
+            </div>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
+        </div>
+        <!-- Divider visually handled by CSS -->
+        <div class="audio-control" style="color: rgb(229, 245, 11);">
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+                <div class="progress-knob"></div>
+            </div>
+            <button class="control-btn add-track-btn" title="Add Track">&#43;</button>
+            <input type="file" class="file-input" accept="audio/*" style="display:none;">
+            <span class="track-name" style="color:#fff; font-size:14px; margin-left:8px;"></span>
+            <button class="control-btn">&#9198;</button>
+            <button class="control-btn">&#9654;</button>
+            <button class="control-btn">&#9197;</button>
+            <button class="control-btn">&#128257;</button>
         </div>
     </div>
 
